Embed live stream

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@ REVIEW
 {% capture review_content %}
   <div class="uk-width-1-1 uk-text-center">
     <a name="videos"></a>
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=9onK2xjY31g"
-      frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9onK2xjY31g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 {% endcapture %}
 {% include content-block.md topShape="straight" title="Live Stream" content=review_content %}
