--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ REVIEW
 {% capture review_content %}
   <div class="uk-width-1-1 uk-text-center">
     <a name="videos"></a>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/9onK2xjY31g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="video-container"><iframe src="https://www.youtube.com/embed/9onK2xjY31g"  frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
   </div>
 {% endcapture %}
 {% include content-block.md topShape="straight" title="Live Stream" content=review_content %}
