Comment live stream

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@ redirect_from:
 {% endcapture %}
 {% include content-block.md topShape="backshape brand-color" content=about_content %}
 
-REVIEW
+<!-- REVIEW
 {% capture review_content %}
   <div class="uk-width-1-1 uk-text-center">
     <a name="videos"></a>
     <div class="video-container"><iframe src="https://www.youtube.com/embed/jdDq5wNkqZ8"  frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
   </div>
 {% endcapture %}
-{% include content-block.md topShape="straight" title="Live Stream" content=review_content %}
+{% include content-block.md topShape="straight" title="Live Stream" content=review_content %} -->
 
 
 <!-- SCHEDULE --> 
