--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ redirect_from:
 - /venue.html
 ---
 
-<div class="headerimage-home" style="background-image: url({{ site.baseurl }}/static/images/hero_radialsystem.jpg);" data-uk-parallax="{bg: '-50'}">
+<div class="headerimage-home" style="background-image: url({{ site.baseurl }}/static/images/hero_radialsystem.jpg);">
   <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
     <div class="teaser-register">
       <img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf" />
-      <p>May 26th-29th 2019<br/>
+      <p>May 17th – 20th, 2020<br/>
       <a href="#Location"><i class="uk-icon-map-o"></i> Radialsystem V - Berlin</a></p>
-      <a class="btn uk-button-large" href="{{ site.ticket_url }}">Register now</a>
+      <!-- <a class="btn uk-button-large" href="{{ site.ticket_url }}">Register now</a> -->
       <p><a href="#Sponsors">Become a Sponsor</a> &nbsp; | &nbsp;
       <a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign up for News</a>
       </p>
@@ -30,8 +30,8 @@ redirect_from:
         <h2>About UIKonf</h2>
       </div>
       <div class="uk-width-medium-1-2">
-        <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 26th to
-        29th 2019 in RADIALSYSTEM V in Berlin it is a great place to meet and connect with experienced
+        <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 17th to
+        20th 2020 in RADIALSYSTEM V in Berlin it is a great place to meet and connect with experienced
         developers from all over Europe.</p>
         <p>UIKonf features inspiring speakers giving talks on cutting edge topics in iOS development, mobile
         design and business.</p>
@@ -60,7 +60,7 @@ redirect_from:
 
 <!-- SCHEDULE --> 
 {% capture schedule_content %}
-  {% include schedule.md context="schedule" %}
+  {% include schedule.md context="home" %}
 {% endcapture %}
 {% include content-block.md topShape="backshape light-grey" title="Schedule" content=schedule_content %}
 
@@ -104,7 +104,7 @@ redirect_from:
     </div>
   {% endfor %}
 {% endcapture %}
-{% include content-block.md topShape="backshape light-grey" title="Speakers" content=speaker_content %}
+{% include content-block.md topShape="backshape light-grey" title="Speakers 2019" content=speaker_content %}
 
 <!-- SPONSORS --> 
 <a name="Sponsors"></a>
@@ -116,13 +116,17 @@ redirect_from:
   </div>
   {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
   {% for sponsor in activeSponsors %}
-    <div class="uk-width-medium-1-1 uk-width-large-1-2 uk-width-small-1-1 ">
-      {% include sponsor.md content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%}
+    <div class="uk-width-medium-1-2 uk-width-large-1-4 uk-width-small-1-2 ">
+	<figure class="uk-overlay uk-overlay-hover" style="padding: 20px 40px;">
+	        <img class="uk-overlay-spin" src="/static/images/{{ sponsor.image }}" alt="{{ sponsor.image-alt }}">
+	        <a class="uk-position-cover" href="{{ sponsor.anchor }}" target="_blank"></a>
+	</figure>
     </div>
+      <!-- {% include sponsor.md content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%} -->
   {% endfor %}
   {% endif %}
 {% endcapture %}
-{% include content-block.md topShape="backshape" title="Sponsors" content=sponsor_content %}
+{% include content-block.md topShape="backshape" title="Sponsors 2019" content=sponsor_content %}
 
 <!-- SOCIAL EVENTS --> 
 {% capture event_content %}
@@ -149,7 +153,7 @@ redirect_from:
 
 
 
-MAP
+<!-- MAP -->
 {% capture map_content %}
   <div class="uk-width-medium-4-10">
     <a name="Location"></a>
