uk-container-center is not supported

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ redirect_from:
 
 <!-- ABOUT --> 
 {% capture about_content %}
-  <div class="uk-width-medium-8-10 uk-container-center">
+  <div class="uk-width-medium-8-10">
     <div class="uk-grid">
       <div class="uk-width-1-1">
         <h2>About UIKonf</h2>
