--- a/speaker.html
+++ b/speaker.html
@@ -15,7 +15,7 @@ redirect_from:
   <img class="uk-invisible" src="{{ site.baseurl }}/static/images/speakers-header-cropped.jpg" alt="speaker image">
    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
       <div class="teaser">
-	    <div class="uk-container uk-container-center">
+	    <div class="uk-container">
 			<div class="uk-grid">
         		<div class="uk-width-1-1">
         			<h1>Speakers at UIKonf 2019</h1>
@@ -48,7 +48,7 @@ redirect_from:
 
 <div class="straight light-grey">
 	<div class="wrapper">
-		<div class="uk-container uk-container-center uk-margin-large-top">
+		<div class="uk-container uk-margin-large-top">
 	    	<div class="uk-width-1-1">
 	      		<p> <a href="#newsletter">Sign up for our newsletter</a> to be informed about upcoming speakers.</p>
 	  		</div>
