--- a/workshops.html
+++ b/workshops.html
@@ -11,7 +11,7 @@ description: UIKonf 2019 - Workshops
   <img class="uk-invisible" src="{{ site.baseurl }}/static/images/speakers-header-cropped.jpg" alt="speaker image">
    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
       <div class="teaser">
-	    <div class="uk-container uk-container-center">
+	    <div class="uk-container">
 			<div class="uk-grid">
         		<div class="uk-width-1-1">
         			<h1>Workshops at UIKonf 2019</h1>
@@ -57,7 +57,7 @@ description: UIKonf 2019 - Workshops
 
 <div class="straight light-grey">
 	<div class="wrapper">
-		<div class="uk-container uk-container-center uk-margin-large-top">
+		<div class="uk-container uk-margin-large-top">
 	    	<div class="uk-width-1-1">
 	      		<p>In addition to these workshops, the last day of UIKonf will host an unconference-like get-together where everyone can share their knowledge in self-organized labs. If you want to offer a workshop as well, <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>.</p>
 	  		</div>
