--- a/mytaxi-stage.html
+++ b/mytaxi-stage.html
@@ -18,7 +18,7 @@ description: UIKonf 2019 - mytaxi Stage on a Boat
 </div>
   <div class="backshape opposite light-grey">
   	<div class="wrapper">
-  		<div class="uk-container uk-container-center uk-margin-large-bottom">
+  		<div class="uk-container uk-margin-large-bottom">
   			<div class="uk-grid">
   	    	<div class="uk-width-1-1">
 						<h2>mytaxi Stage on a Boat</h2>
@@ -65,7 +65,7 @@ description: UIKonf 2019 - mytaxi Stage on a Boat
 
 <div class="straight light-grey">
 	<div class="wrapper">
-		<div class="uk-container uk-container-center uk-margin-large-top">
+		<div class="uk-container uk-margin-large-top">
 	    	<div class="uk-width-1-1">
 	      		<p>In addition to these workshops, the last day of UIKonf will host an unconference-like get-together where everyone can share their knowledge in self-organized labs. If you want to offer a workshop as well, <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>.</p>
 	  		</div>
