--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ redirect_from:
         design and business.</p>
       </div>
       <div class="uk-width-medium-1-2">
-        <p class="uk-contrast">But UIKonf is not only about gathering knowledge. We want to facilitate new
+        <p class="uk-light">But UIKonf is not only about gathering knowledge. We want to facilitate new
         connections and friends amongst our great community by providing an inclusive setting where all participants feel safe and welcome. In
         order to achieve that, we expect all to abide by our <a href="coc">Code of Conduct</a>.</p>
         <p>To help people connect, we framed UIKonf with social events which provide an informal environment for
