update the layout classes to new uikit

--- a/speaker.html
+++ b/speaker.html
@@ -20,10 +20,10 @@ redirect_from:
         		<div class="uk-width-1-1">
         			<h1>Speakers at UIKonf 2019</h1>
 				</div>
-       	 		<div class="uk-width-medium-1-2 uk-text-left">
+       	 		<div class="uk-width-1-2@m uk-text-left">
 			 	   <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about half of our speakers. The other half is selected by our community through our anonymous call for proposals system. Details coming soon.</p>
 				</div>
-    			<div class="uk-width-medium-1-2 uk-text-left">
+    			<div class="uk-width-1-2@m uk-text-left">
 					<p><a href="#newsletter">Sign up for our newsletter</a>, if you would like to receive an email when we announce the speakers and when the call for proposal starts.</p>
 				</div>
 			</div>
