--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@ redirect_from:
 
 <!-- ABOUT --> 
 {% capture about_content %}
-  <div class="uk-width-medium-8-10">
+  <div class="uk-width-8-10@m">
     <div class="uk-grid">
       <div class="uk-width-1-1">
         <h2>About UIKonf</h2>
       </div>
-      <div class="uk-width-medium-1-2">
+      <div class="uk-width-1-2@m">
         <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 26th to
         29th 2020 in RADIALSYSTEM V in Berlin it is a great place to meet and connect with experienced
         developers from all over Europe.</p>
         <p>UIKonf features inspiring speakers giving talks on cutting edge topics in iOS development, mobile
         design and business.</p>
       </div>
-      <div class="uk-width-medium-1-2">
+      <div class="uk-width-1-2@m">
         <p class="uk-light">But UIKonf is not only about gathering knowledge. We want to facilitate new
         connections and friends amongst our great community by providing an inclusive setting where all participants feel safe and welcome. In
         order to achieve that, we expect all to abide by our <a href="coc">Code of Conduct</a>.</p>
@@ -97,7 +97,7 @@ redirect_from:
       up for our newsletter to hear about our invited speakers first.</a></p>
   </div>
   {% for speaker in site.speakers %}
-    <div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
+    <div class="uk-width-1-2@m uk-width-1-2@s uk-width-1-3@l">
         {% capture speaker_link %}/speakers#{{ speaker.anchor}}{% endcapture %}
         {% capture speaker_image %}/speaker/{{ speaker.image}}{% endcapture %}
         {% include person.md title=speaker.title inbox-description=speaker.short-bio image=speaker_image link=speaker_link isSmall=0 %}
@@ -116,7 +116,7 @@ redirect_from:
   </div>
   {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
   {% for sponsor in activeSponsors %}
-    <div class="uk-width-medium-1-1 uk-width-large-1-2 uk-width-small-1-1 ">
+    <div class="uk-width-1-1@m uk-width-1-1@s uk-width-1-2@l">
       {% include sponsor.md content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%}
     </div>
   {% endfor %}
@@ -139,7 +139,7 @@ redirect_from:
   {% endfor %}
 
   {% if activeEvents.size > 0 %}
-    <div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
+    <div class="uk-text-center uk-width-1-2@m uk-width-1-1@s uk-width-1-1@l uk-margin-large-top">
       <a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="/social-events" alt="Social Events">More details</a>
     </div>
   {% endif %}
@@ -151,14 +151,14 @@ redirect_from:
 
 MAP
 {% capture map_content %}
-  <div class="uk-width-medium-4-10">
+  <div class="uk-width-4-10@m">
     <a name="Location"></a>
     <h2 class="uk-margin-large-top">Location</h2>
     <p>RADIALSYSTEM V Berlin,
         <br/>Holzmarktstr. 33,
         <br/>10243 Berlin</p>
   </div>
-  <div class="uk-width-medium-6-10 uk-margin-large-top">
+  <div class="uk-width-6-10@m uk-margin-large-top">
     <div id='map'></div>
   </div>
 {% endcapture %}
