--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ redirect_from:
     <div class="teaser-register">
       <img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf" />
       <p>May 26th-29th 2020<br/>
-      <a href="#Location"><i class="uk-icon-map-o"></i> Radialsystem V - Berlin</a></p>
+      <a href="#Location"><i uk-icon="icon: map"></i> Radialsystem V - Berlin</a></p>
       <a class="btn uk-button-large" href="{{ site.ticket_url }}">Register now</a>
       <p><a href="#Sponsors">Become a Sponsor</a> &nbsp; | &nbsp;
       <a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign up for News</a>
