--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ redirect_from:
 - /venue.html
 ---
 
-<div class="headerimage-home" style="background-image: url({{ site.baseurl }}/static/images/hero_radialsystem.jpg);" uk-parallax="bgx: -50">
+<div class="headerimage-home" style="background-image: url({{ site.baseurl }}/static/images/hero_radialsystem.jpg);" uk-parallax="by: -50">
   <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
     <div class="teaser-register">
       <img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf" />
