update footer, fix home page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ redirect_from:
 {% capture schedule_content %}
   {% include schedule.md context="home" %}
 {% endcapture %}
-{% include content-block.md topShape="backshape light-grey" title="Schedule" content=schedule_content %} -->
+{% include content-block.md topShape="backshape light-grey" title="Schedule" content=schedule_content %}
 
 <!-- TICKETS  -->
 <!-- {% capture ticket_content %}
