styling for the headers, new fonts

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ redirect_from:
 - /venue.html
 ---
 
-<div class="headerimage-home" style="background-image: url({{ site.baseurl }}/static/images/hero_radialsystem.jpg);" uk-parallax="by: -50">
+<div class="headerimage-home" style="background-image: url({{ site.baseurl }}/static/images/uikonf_2020_hero_image.jpg);" uk-parallax="by: -50">
   <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
     <div class="teaser-register">
-      <img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf" />
+      <img src="{{ site.baseurl }}/static/images/uikonf-logo.svg" height="280" width="280" alt="logo UIKonf" />
       <p>May 17th – 20th, 2020<br/>
       <a href="#Location"><i uk-icon="icon: map"></i> Radialsystem V - Berlin</a></p>
       <!-- <a class="btn uk-button-large" href="{{ site.ticket_url }}">Register now</a> -->
