--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ redirect_from:
     <div class="uk-width-1-2@m uk-width-1-2@s uk-width-1-3@l">
         {% capture speaker_link %}/speakers#{{ speaker.anchor}}{% endcapture %}
         {% capture speaker_image %}/speaker/{{ speaker.image}}{% endcapture %}
-        {% include person.md title=speaker.title inbox-description=speaker.short-bio image=speaker_image link=speaker_link isSmall=0 %}
+        {% include person.md title=speaker.title description=speaker.short-bio image=speaker_image link=speaker_link isSmall=0 %}
     </div>
   {% endfor %}
 {% endcapture %}
