fix the footer, remove unused styles

--- a/workshops.html
+++ b/workshops.html
@@ -47,7 +47,7 @@ description: UIKonf 2019 - Workshops
 
 
 
-<div class="straight light-grey">
+<div class="light-grey">
 	<div class="wrapper">
 		<div class="uk-container uk-margin-large-top">
 	    	<div class="uk-width-1-1">
