--- a/mytaxi-stage.html
+++ b/mytaxi-stage.html
@@ -55,7 +55,7 @@ description: UIKonf 2019 - mytaxi Stage on a Boat
 
 {% endfor %}
 
-<div class="straight light-grey">
+<div class="light-grey">
 	<div class="wrapper">
 		<div class="uk-container uk-margin-large-top">
 	    	<div class="uk-width-1-1">
