--- a/speaker.html
+++ b/speaker.html
@@ -40,7 +40,7 @@ redirect_from:
 {% endfor %}
 
 
-<div class="straight light-grey">
+<div class="light-grey">
 	<div class="wrapper">
 		<div class="uk-container uk-margin-large-top">
 	    	<div class="uk-width-1-1">
