--- a/index.html
+++ b/index.html
@@ -8,47 +8,53 @@ redirect_from:
 - /venue.html
 ---
 
-<div class="headerimage-home" style="background-image: url({{ site.baseurl }}/static/images/uikonf_2020_hero_image.jpg);" uk-parallax="by: -50">
+<div class="headerimage-home"
+  style="background-image: url('{{ site.baseurl }}/static/images/uikonf_2020_hero_image.jpg');" uk-parallax="by: -50">
+  {% include header.html %}
   <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
     <div class="teaser-register">
       <img src="{{ site.baseurl }}/static/images/uikonf-logo.svg" height="280" width="280" alt="logo UIKonf" />
-      <p>May 17th – 20th, 2020<br/>
-      <a href="#Location"><i uk-icon="icon: map"></i> Radialsystem V - Berlin</a></p>
+      <p>May 17th – 20th, 2020<br />
+        <a href="#Location"><i uk-icon="icon: map"></i> Radialsystem V - Berlin</a></p>
       <!-- <a class="btn uk-button-large" href="{{ site.ticket_url }}">Register now</a> -->
       <p><a href="#Sponsors">Become a Sponsor</a> &nbsp; | &nbsp;
-      <a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign up for News</a>
+        <a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf"
+          target="_blank">Sign up for News</a>
       </p>
     </div>
   </div>
 </div>
 
-<!-- ABOUT --> 
+<!-- ABOUT -->
 {% capture about_content %}
-  <div class="uk-width-8-10@m">
-    <div class="uk-grid">
-      <div class="uk-width-1-1">
-        <h2>About UIKonf</h2>
-      </div>
-      <div class="uk-width-1-2@m">
-        <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 17th to
-        20th 2020 in RADIALSYSTEM V in Berlin it is a great place to meet and connect with experienced developers from all over Europe.</p>
-        <p>UIKonf features inspiring speakers giving talks on cutting edge topics in iOS development, mobile design and business.</p>
-      </div>
-      <div class="uk-width-1-2@m">
-        <p class="uk-light">But UIKonf is not only about gathering knowledge. We want to facilitate new
-        connections and friends amongst our great community by providing an inclusive setting where all participants feel safe and welcome. In
+<div class="uk-width-8-10@m">
+  <div class="uk-grid">
+    <div class="uk-width-1-1">
+      <h2>About UIKonf</h2>
+    </div>
+    <div class="uk-width-1-2@m">
+      <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 17th to
+        20th 2020 in RADIALSYSTEM V in Berlin it is a great place to meet and connect with experienced developers from
+        all over Europe.</p>
+      <p>UIKonf features inspiring speakers giving talks on cutting edge topics in iOS development, mobile design and
+        business.</p>
+    </div>
+    <div class="uk-width-1-2@m">
+      <p class="uk-light">But UIKonf is not only about gathering knowledge. We want to facilitate new
+        connections and friends amongst our great community by providing an inclusive setting where all participants
+        feel safe and welcome. In
         order to achieve that, we expect all to abide by our <a href="coc">Code of Conduct</a>.</p>
-        <p>To help people connect, we framed UIKonf with social events which provide an informal environment for
+      <p>To help people connect, we framed UIKonf with social events which provide an informal environment for
         meeting like-minded people.</p>
-      </div>
     </div>
   </div>
+</div>
 {% endcapture %}
 {% include content-block.md content=about_content %}
 
-<!-- SCHEDULE --> 
+<!-- SCHEDULE -->
 {% capture schedule_content %}
-  {% include schedule.md context="home" %}
+{% include schedule.md context="home" %}
 {% endcapture %}
 {% include content-block.md title="Schedule" content=schedule_content %}
 
@@ -72,72 +78,72 @@ redirect_from:
 {% endcapture %}
 {% include content-block.md title="Tickets" content=ticket_content %} -->
 
-<!-- SPEAKER --> 
+<!-- SPEAKER -->
 {% capture speaker_content %}
-  <div class="uk-width-1-1">
-    <p>For UIKonf 2019 we decided to present you a special edition with an amazing all female speaker line up. We therefore decided 
-      to pause the CfP for this year and invite all speakers personally. However, if you would like to speak or suggest someone, 
-      please <a href="mailto:engin@uikonf.com" target="_blank">reach out to Engin</a>.</p>
-    <p>As a speaker, your travel expenses will be reimbursed and you will be our guests
+<div class="uk-width-1-1">
+  <p>For UIKonf 2019 we decided to present you a special edition with an amazing all female speaker line up. We
+    therefore decided
+    to pause the CfP for this year and invite all speakers personally. However, if you would like to speak or suggest
+    someone,
+    please <a href="mailto:engin@uikonf.com" target="_blank">reach out to Engin</a>.</p>
+  <p>As a speaker, your travel expenses will be reimbursed and you will be our guests
     at our selected Hotel in Berlin. Of course, we will also reimburse you for your ticket if you already have
     purchased one.</p>
-    <p><a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign
+  <p><a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf"
+      target="_blank">Sign
       up for our newsletter to hear about our invited speakers first.</a></p>
-  </div>
-  {% for speaker in site.speakers %}
-    <div class="uk-width-1-2@m uk-width-1-2@s uk-width-1-3@l">
-        {% capture speaker_link %}/speakers#{{ speaker.anchor}}{% endcapture %}
-        {% capture speaker_image %}/speaker/{{ speaker.image}}{% endcapture %}
-        {% include person.md title=speaker.title description=speaker.short-bio image=speaker_image link=speaker_link isSmall=0 %}
-    </div>
-  {% endfor %}
+</div>
+{% for speaker in site.speakers %}
+<div class="uk-width-1-2@m uk-width-1-2@s uk-width-1-3@l">
+  {% capture speaker_link %}/speakers#{{ speaker.anchor}}{% endcapture %}
+  {% capture speaker_image %}/speaker/{{ speaker.image}}{% endcapture %}
+  {% include person.md title=speaker.title description=speaker.short-bio image=speaker_image link=speaker_link isSmall=0 %}
+</div>
+{% endfor %}
 {% endcapture %}
 {% include content-block.md title="Speakers 2019" content=speaker_content %}
 
-<!-- SPONSORS --> 
+<!-- SPONSORS -->
 <a name="Sponsors"></a>
 {% capture sponsor_content %}
-  <div class="uk-width-1-1 uk-text-center">
-    <p>If you want to help us bring the iOS developer community together, <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>. Previous UIKonf supporters
-    include Keepsafe, Facebook, ebay Tech, JetBrains, Google Firebase, 
+<div class="uk-width-1-1 uk-text-center">
+  <p>If you want to help us bring the iOS developer community together, <a href="mailto:questions@uikonf.com"
+      target="_blank">get in touch with us</a>. Previous UIKonf supporters
+    include Keepsafe, Facebook, ebay Tech, JetBrains, Google Firebase,
     Sky and Microsoft.</p>
-  </div>
-  {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
-  {% for sponsor in activeSponsors %}
-    <!-- <div class="uk-width-1-1@m uk-width-1-1@s uk-width-1-2@l">
-      {% include sponsor.md content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%}
-    </div> -->
-	<div class="uk-width-medium-1-2 uk-width-large-1-4 uk-width-small-1-2 ">
-		<figure class="uk-overlay uk-overlay-hover" style="padding: 20px 40px;max-width: 200px;
-    margin: 0 auto;">
-		        <img class="uk-overlay-spin" src="/static/images/{{ sponsor.image }}" alt="{{ sponsor.image-alt }}">
-		        <a class="uk-position-cover" href="{{ sponsor.anchor }}" target="_blank"></a>
-		</figure>
-	</div>
-  {% endfor %}
-  {% endif %}
+</div>
+{% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
+{% for sponsor in activeSponsors %}
+<div class="uk-width-1-3@m uk-width-1-1@s">
+  {% include sponsor.md content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%}
+</div>
+{% endfor %}
+{% endif %}
 {% endcapture %}
 {% include content-block.md title="Sponsors 2019" content=sponsor_content %}
 
-<!-- SOCIAL EVENTS --> 
+<!-- SOCIAL EVENTS -->
 {% capture event_content %}
-  <div class="uk-width-1-1 uk-margin-large-bottom">
-    <p>A central part of UIKonf are the social events on the Sunday before the conference. Not only do you get to enjoy Berlin for 
-      a day but they also give you a first opportunity to get to know other participants of the conference in a fun atmosphere.</p>
-    <p>These are some events we offered in previous years:</p>
-  </div>
+<div class="uk-width-1-1 uk-margin-large-bottom">
+  <p>A central part of UIKonf are the social events on the Sunday before the conference. Not only do you get to enjoy
+    Berlin for
+    a day but they also give you a first opportunity to get to know other participants of the conference in a fun
+    atmosphere.</p>
+  <p>These are some events we offered in previous years:</p>
+</div>
 
-  {% assign activeEvents = site.events | where:"active",1 %} 
+{% assign activeEvents = site.events | where:"active",1 %}
 
-  {% for event in activeEvents %}
-    {% include event.md active=event.active title=event.title description=event.description image=event.image image-alt=event.image-alt anchor=event.anchor %}
-  {% endfor %}
+{% for event in activeEvents %}
+{% include event.md active=event.active title=event.title description=event.description image=event.image image-alt=event.image-alt anchor=event.anchor %}
+{% endfor %}
 
-  {% if activeEvents.size > 0 %}
-    <div class="uk-text-center uk-width-1-2@m uk-width-1-1@s uk-width-1-1@l uk-margin-large-top">
-      <a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="/social-events" alt="Social Events">More details</a>
-    </div>
-  {% endif %}
+{% if activeEvents.size > 0 %}
+<div class="uk-text-center uk-width-1-2@m uk-width-1-1@s uk-width-1-1@l uk-margin-large-top">
+  <a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="/social-events"
+    alt="Social Events">More details</a>
+</div>
+{% endif %}
 {% endcapture %}
 {% include content-block.md title="Social Events" content=event_content %}
 
@@ -146,16 +152,16 @@ redirect_from:
 
 <!-- MAP -->
 {% capture map_content %}
-  <div class="uk-width-4-10@m">
-    <a name="Location"></a>
-    <h2 class="uk-margin-large-top">Location</h2>
-    <p>RADIALSYSTEM V Berlin,
-        <br/>Holzmarktstr. 33,
-        <br/>10243 Berlin</p>
-  </div>
-  <div class="uk-margin-large-top">
-    <div id='map'></div>
-  </div>
+<div class="uk-width-4-10@m">
+  <a name="Location"></a>
+  <h2 class="uk-margin-large-top">Location</h2>
+  <p>RADIALSYSTEM V Berlin,
+    <br />Holzmarktstr. 33,
+    <br />10243 Berlin</p>
+</div>
+<div class="uk-margin-large-top">
+  <div id='map'></div>
+</div>
 {% endcapture %}
 {% include content-block.md content=map_content %}
 
