hero teaser updated

--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@ redirect_from:
   <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
     <div class="teaser-register">
       <img src="{{ site.baseurl }}/static/images/uikonf-logo.svg" height="280" width="280" alt="logo UIKonf" />
-      <p>May 17th – 20th, 2020<br />
-        <a href="#Location"><i uk-icon="icon: map"></i> Radialsystem V - Berlin</a></p>
-      <!-- <a class="btn uk-button-large" href="{{ site.ticket_url }}">Register now</a> -->
-      <p><a href="#Sponsors">Become a Sponsor</a> &nbsp; | &nbsp;
-        <a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf"
-          target="_blank">Sign up for News</a>
-      </p>
+      <h1>May 2020 · Berlin</h1>
+        <a class="btn uk-button-large" href="{{ site.ticket_url }}">Book now</a>
+
     </div>
   </div>
 </div>
