update button styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ redirect_from:
     <div class="teaser-register">
       <img src="{{ site.baseurl }}/static/images/uikonf-logo.svg" height="280" width="280" alt="logo UIKonf" />
       <h1>May 2020 · Berlin</h1>
-        <a class="btn uk-button-large" href="{{ site.ticket_url }}">Book now</a>
+        <a class="btn" href="{{ site.ticket_url }}">Book now</a>
 
     </div>
   </div>
@@ -136,8 +136,7 @@ redirect_from:
 
 {% if activeEvents.size > 0 %}
 <div class="uk-text-center uk-width-1-2@m uk-width-1-1@s uk-width-1-1@l uk-margin-large-top">
-  <a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="/social-events"
-    alt="Social Events">More details</a>
+  <a class="btn" href="/social-events" alt="Social Events">More details</a>
 </div>
 {% endif %}
 {% endcapture %}
