--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@ redirect_from:
       target="_blank">Sign
       up for our newsletter to hear about our invited speakers first.</a></p>
 </div>
-<div class="uk-width-1-1">
-  <div class="uk-width-2-3@m uk-grid uk-margin-medium-top uk-margin-medium-bottom" style="margin-left: auto; margin-right: auto;">
+<div class="">
+  <div class="uk-width-2-3@m uk-grid uk-flex-center uk-child-width-1-4@m uk-child-width-1-1@s uk-margin-medium-top uk-margin-medium-bottom" style="margin-left: auto; margin-right: auto;">
       {% for speaker in site.speakers %}
-      <div class="uk-width-1-1@s uk-width-1-3@m uk-margin-bottom uk-text-center">
+      <div class="uk-margin-bottom uk-text-center">
         {% capture speaker_link %}/speakers#{{ speaker.anchor}}{% endcapture %}
         {% capture speaker_image %}/speaker/{{ speaker.image}}{% endcapture %}
         {% include person.html title=speaker.title description=speaker.short-bio image=speaker_image link=speaker_link isSmall=0 %}
@@ -101,10 +101,11 @@ redirect_from:
 {% endcapture %}
 {% include content-block.md title="Speakers 2019" content=speaker_content classes="light-grey" %}
 
-<div class="uk-background-primary">
+<!-- SPONSORS -->
+<div class="">
     <div class="uk-container">
-      <h2 class="uk-text-center">Sponsors!!</h2>
-      <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-4" uk-grid>
+      <h2 class="uk-text-center">Sponsors</h2>
+      <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-3@m" uk-grid>
           {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
           {% for sponsor in activeSponsors %}
           <div class="">
@@ -112,44 +113,11 @@ redirect_from:
           </div>
           {% endfor %}
         {% endif %}
-
-          <div class="uk-first-column">
-              <div class="sponsor-logo" data-src="/static/images/sponsors/my-taxi.png" uk-img="" style="background-image: url(&quot;http://localhost:4000/static/images/sponsors/my-taxi.png&quot;);">
-              </div>
-          </div>
-          <div class="">
-              <div class="uk-card uk-card-default uk-card-body">Item 2</div>
-          </div>
-          <div class="">
-              <div class="uk-card uk-card-default uk-card-body">Item 3</div>
-          </div>
       </div>
     </div>
 </div>
 
-<!-- SPONSORS -->
-<a name="Sponsors"></a>
-{% capture sponsor_content %}
-<div class="uk-width-1-1 uk-text-center">
-  <p>If you want to help us bring the iOS developer community together, <a href="mailto:questions@uikonf.com"
-      target="_blank">get in touch with us</a>.<br>
-    Previous UIKonf supporters
-    include Keepsafe, Facebook, ebay Tech, JetBrains, Google Firebase,
-    Sky and Microsoft.</p>
-</div>
-<div class="uk-width-1-1 uk-text-center uk-flex uk-flex-wrap">
-{% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
-  {% for sponsor in activeSponsors %}
-  <div class="uk-width-1-3@m uk-width-1-1@s">
-    {% include sponsor.md content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%}
-  </div>
-  {% endfor %}
-{% endif %}
-</div>
-{% endcapture %}
-{% include content-block.md title="Sponsors 2019" content=sponsor_content %}
-
-
+<!-- SOCIAL EVENTS -->
 <div class="light-grey">
     <div class="uk-container">
       <h2 class="uk-text-center">Social Events</h2>
@@ -170,7 +138,6 @@ redirect_from:
           {% include person.html title=event.title description=event.description image=event_image link=event_link isSmall=0 %}
         </div>
           {% endfor %}
-  
       </div>
     </div>
 </div>
