--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ redirect_from:
 {% include content-block.md content=about_content %}
 
 <!-- SCHEDULE -->
-<!-- {% capture schedule_content %}
+{% capture schedule_content %}
 {% include schedule.md context="home" %}
 {% endcapture %}
-{% include content-block.md title="Schedule" content=schedule_content %} -->
+{% include content-block.md title="Schedule" content=schedule_content %}
 
 <!-- TICKETS  -->
 <!-- {% capture ticket_content %}
@@ -87,7 +87,7 @@ redirect_from:
       up for our newsletter to hear about our invited speakers first.</a></p>
 </div>
 <div class="">
-  <div class="uk-width-2-3@m uk-grid uk-flex-center uk-child-width-1-4@m uk-child-width-1-1@s uk-margin-medium-top uk-margin-medium-bottom" style="margin-left: auto; margin-right: auto;">
+  <div class="uk-width-2-3@m uk-grid uk-flex-center uk-child-width-1-3@m uk-child-width-1-1@s uk-margin-medium-top uk-margin-medium-bottom" style="margin-left: auto; margin-right: auto;">
       {% for speaker in site.speakers %}
       <div class="uk-margin-bottom uk-text-center">
         {% capture speaker_link %}/speakers#{{ speaker.anchor}}{% endcapture %}
@@ -105,7 +105,7 @@ redirect_from:
 <div class="">
     <div class="uk-container">
       <h2 class="uk-text-center">Sponsors</h2>
-      <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-3@m" uk-grid>
+      <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-3@m uk-margin-large-bottom" uk-grid>
           {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
           {% for sponsor in activeSponsors %}
           <div class="">
