--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ redirect_from:
     <div class="teaser-register">
       <img src="{{ site.baseurl }}/static/images/uikonf-logo.svg" height="280" width="280" alt="logo UIKonf" />
       <h1>May 2020 · Berlin</h1>
-        <a class="btn" href="{{ site.ticket_url }}">Book now</a>
+      <a class="btn" href="{{ site.ticket_url }}">Book now</a>
 
     </div>
   </div>
@@ -72,73 +72,79 @@ redirect_from:
 {% include content-block.html title="Tickets" content=ticket_content %} -->
 
 <!-- SPEAKER -->
-{% capture speaker_content %}
-<div class="uk-width-1-1">
-  <p>For UIKonf 2019 we decided to present you a special edition with an amazing all female speaker line up. We
-    therefore decided
-    to pause the CfP for this year and invite all speakers personally. However, if you would like to speak or suggest
-    someone,
-    please <a href="mailto:engin@uikonf.com" target="_blank">reach out to Engin</a>.</p>
-  <p>As a speaker, your travel expenses will be reimbursed and you will be our guests
-    at our selected Hotel in Berlin. Of course, we will also reimburse you for your ticket if you already have
-    purchased one.</p>
-  <p><a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf"
-      target="_blank">Sign
-      up for our newsletter to hear about our invited speakers first.</a></p>
-</div>
-<div class="">
-  <div class="uk-width-2-3@m uk-grid uk-flex-center uk-child-width-1-3@m uk-child-width-1-1@s uk-margin-medium-top uk-margin-medium-bottom" style="margin-left: auto; margin-right: auto;">
-      {% for speaker in site.speakers %}
-      <div class="uk-margin-bottom uk-text-center">
-        {% capture speaker_link %}/speakers#{{ speaker.anchor}}{% endcapture %}
-        {% capture speaker_image %}/speaker/{{ speaker.image}}{% endcapture %}
-        {% include person.html title=speaker.title description=speaker.short-bio image=speaker_image link=speaker_link isSmall=0 %}
+<div class="light-grey">
+  <div class="uk-container">
+    <h2 class="uk-text-center">Speakers 2019</h2>
+    <div class="uk-width-1-1">
+      <p>For UIKonf 2019 we decided to present you a special edition with an amazing all female speaker line up. We
+        therefore decided
+        to pause the CfP for this year and invite all speakers personally. However, if you would like to speak or
+        suggest
+        someone,
+        please <a href="mailto:engin@uikonf.com" target="_blank">reach out to Engin</a>.</p>
+      <p>As a speaker, your travel expenses will be reimbursed and you will be our guests
+        at our selected Hotel in Berlin. Of course, we will also reimburse you for your ticket if you already have
+        purchased one.</p>
+      <p><a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf"
+          target="_blank">Sign
+          up for our newsletter to hear about our invited speakers first.</a></p>
+    </div>
+    <div class="">
+      <div
+        class="uk-width-2-3@m uk-grid uk-flex-center uk-child-width-1-3@m uk-child-width-1-1@s uk-margin-medium-top uk-margin-medium-bottom"
+        style="margin-left: auto; margin-right: auto;">
+        {% for speaker in site.speakers %}
+        <div class="uk-margin-bottom uk-text-center">
+          {% capture speaker_link %}/speakers#{{ speaker.anchor}}{% endcapture %}
+          {% capture speaker_image %}/speaker/{{ speaker.image}}{% endcapture %}
+          {% include person.html title=speaker.title description=speaker.short-bio image=speaker_image link=speaker_link isSmall=0 %}
+        </div>
+        {% endfor %}
       </div>
-      {% endfor %}
+    </div>
   </div>
 </div>
 
-{% endcapture %}
-{% include content-block.html title="Speakers 2019" content=speaker_content classes="light-grey" %}
 
 <!-- SPONSORS -->
 <div class="">
-    <div class="uk-container">
-      <h2 class="uk-text-center">Sponsors</h2>
-      <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-3@m uk-margin-large-bottom" uk-grid>
-          {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
-          {% for sponsor in activeSponsors %}
-          <div class="">
-            {% include sponsor.html content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%}
-          </div>
-          {% endfor %}
-        {% endif %}
+  <div class="uk-container">
+    <h2 class="uk-text-center">Sponsors</h2>
+    <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-3@m uk-margin-large-bottom" uk-grid>
+      {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
+      {% for sponsor in activeSponsors %}
+      <div class="">
+        {% include sponsor.html content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%}
       </div>
+      {% endfor %}
+      {% endif %}
     </div>
+  </div>
 </div>
 
 <!-- SOCIAL EVENTS -->
 <div class="light-grey">
-    <div class="uk-container">
-      <h2 class="uk-text-center">Social Events</h2>
-      <div class="uk-width-1-1 uk-margin-large-bottom">
-          <p>A central part of UIKonf are the social events on the Sunday before the conference. Not only do you get to enjoy
-            Berlin for
-            a day but they also give you a first opportunity to get to know other participants of the conference in a fun
-            atmosphere.</p>
-          <p>These are some events we offered in previous years:</p>
-      </div>
-      <div class="uk-text-center uk-grid uk-flex-center uk-child-width-1-4@m uk-child-width-1-1@s uk-margin-large-bottom" uk-grid>
-          {% assign activeEvents = site.events | where:"active",1 %}
-
-          {% for event in activeEvents %}
-          <div class="">
-              {% capture event_link %}/social-events#{{ event.anchor}}{% endcapture %}
-              {% capture event_image %}/events/{{ event.image}}{% endcapture %}
-          {% include person.html title=event.title description=event.description image=event_image link=event_link isSmall=0 %}
-        </div>
-          {% endfor %}
-      </div>
+  <div class="uk-container">
+    <h2 class="uk-text-center">Social Events</h2>
+    <div class="uk-width-1-1 uk-margin-large-bottom">
+      <p>A central part of UIKonf are the social events on the Sunday before the conference. Not only do you get to
+        enjoy
+        Berlin for
+        a day but they also give you a first opportunity to get to know other participants of the conference in a fun
+        atmosphere.</p>
+      <p>These are some events we offered in previous years:</p>
     </div>
-</div>
+    <div class="uk-text-center uk-grid uk-flex-center uk-child-width-1-4@m uk-child-width-1-1@s uk-margin-large-bottom"
+      uk-grid>
+      {% assign activeEvents = site.events | where:"active",1 %}
 
+      {% for event in activeEvents %}
+      <div class="">
+        {% capture event_link %}/social-events#{{ event.anchor}}{% endcapture %}
+        {% capture event_image %}/events/{{ event.image}}{% endcapture %}
+        {% include person.html title=event.title description=event.description image=event_image link=event_link isSmall=0 %}
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
